force-app/main/default/objects/Student__c/fields/Bank_Account_holder_name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_holder_name__c</fullName>
    <label>Bank Account holder name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>