force-app/main/default/objects/Student__c/fields/Bank_name__c.field-meta.xml
<CustomField>
    <fullName>Bank_name__c</fullName>
    <label>Bank-name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>