force-app/main/default/objects/Student__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>MBBS</fullName>
            </value>
            <value>
                <fullName>Int MTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>