force-app/main/default/objects/Student__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <label>Current Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st year</fullName>
            </value>
            <value>
                <fullName>2nd year</fullName>
            </value>
            <value>
                <fullName>3rd year</fullName>
            </value>
            <value>
                <fullName>4th year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>