force-app/main/default/objects/Student__c/fields/IFSC_CODE__c.field-meta.xml
<CustomField>
    <fullName>IFSC_CODE__c</fullName>
    <label>IFSC-CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>