force-app/main/default/objects/Student__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-eligible</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Amount-Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>