force-app/main/default/objects/Student__c/fields/X10__c.field-meta.xml
<CustomField>
    <fullName>X10__c</fullName>
    <formula>X10th_mark__c  /  X10th_maximum_marks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>