force-app/main/default/objects/Student__c/fields/X10th_mark__c.field-meta.xml
<CustomField>
    <fullName>X10th_mark__c</fullName>
    <label>10th Mark Obtained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>