force-app/main/default/objects/Student__c/fields/X10th_maximum_marks__c.field-meta.xml
<CustomField>
    <fullName>X10th_maximum_marks__c</fullName>
    <label>10th maximum marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>