force-app/main/default/objects/Student__c/validationRules/Application_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Count__c  &gt; 1</errorConditionFormula>
    <errorMessage>can not apply more than on</errorMessage>
</ValidationRule>