force-app/main/default/objects/Student__c/validationRules/Bank_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(UPPER( Bank_name__c )  &lt;&gt; &quot;AXIS&quot;,UPPER( Bank_name__c )  &lt;&gt; &quot;ICICI&quot;,UPPER( Bank_name__c )  &lt;&gt; &quot;HDFC&quot;)</errorConditionFormula>
    <errorDisplayField>Bank_name__c</errorDisplayField>
    <errorMessage>Bank should be related</errorMessage>
</ValidationRule>