force-app/main/default/objects/Student__c/validationRules/Birthday_validation1.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthday_validation1</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR(TODAY()) -  YEAR( Birth_Date__c )&lt;=16</errorConditionFormula>
    <errorDisplayField>Birth_Date__c</errorDisplayField>
    <errorMessage>Age must be greater than 16</errorMessage>
</ValidationRule>