force-app/main/default/objects/Student__c/validationRules/Mark_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Mark_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>X10th_maximum_marks__c  &lt;  X10th_mark__c</errorConditionFormula>
    <errorDisplayField>X10th_mark__c</errorDisplayField>
    <errorMessage>Marks obtained should not exceed maximum marks</errorMessage>
</ValidationRule>