force-app/main/default/objects/Student__c/validationRules/Phone_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(Phone__c) &lt;&gt; 10,LEN(Phone__c) &lt;&gt; 12)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone number must be in between 10 or 12</errorMessage>
</ValidationRule>